--- a/css/global.css
+++ b/css/global.css
@@ -334,11 +334,7 @@ h4{
     float:left;
 	width:740px;}
 	
-.contact-section1 {
-    float:left;
-	margin-top: 85px;
-	width: 350px;}
-	
+
 .pays {
     float:left;
 	width: 300px;}
@@ -353,7 +349,7 @@ h4{
     text-align: justify;}
 	
 .contact {
-	font-family: helvetica,arial,sans-serif;
+    font-family: helvetica,arial,sans-serif;
     color: #3D3D3D;
     line-height: 1.4;
     padding: 20px 0 5px;}
@@ -368,6 +364,20 @@ h4{
 
 .contact2 a:hover{
     color:#3d3d3d;}
+    
+.social {
+    float: left;
+    width: 300px;
+}    
+
+.social img{
+	heigth: 60px;
+	width: 60px;
+	margin-left: 120px;
+}
+.social img:hover{
+	background-image: url('img/github_black.png');
+}
 
 .footer{
 	border-top: 2px solid #3d3d3d;
